--- a/Projects/Games/Games.csproj
+++ b/Projects/Games/Games.csproj
@@ -46,7 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connect4\Functions.cs" />
+    <Compile Include="Connect4\Models.cs" />
     <Compile Include="Menu\Functions.cs" />
+    <Compile Include="Menu\Models.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TicTacToe\Functions.cs" />
