--- a/Projects/WorldSeriesWebScraper/packages.config
+++ b/Projects/WorldSeriesWebScraper/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.50.5" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="HtmlAgilityPack" version="1.8.10" targetFramework="net462" />
   <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net462" />
