Can now generate world seris db3 file

--- a/Projects/WorldSeriesWebScraper/WorldSeriesWebScraper.csproj
+++ b/Projects/WorldSeriesWebScraper/WorldSeriesWebScraper.csproj
@@ -67,7 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database.cs" />
+    <Compile Include="WorldSeriesDatabase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorldSeriesData.cs" />
