started implementing scraping player data

--- a/Projects/WorldSeriesWebScraper/WorldSeriesWebScraper.csproj
+++ b/Projects/WorldSeriesWebScraper/WorldSeriesWebScraper.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Player.cs" />
     <Compile Include="WorldSeriesDatabase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
